--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,14 @@
         <servlet-name>inventory</servlet-name>
         <servlet-class>servlets.InventoryServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>registration</servlet-name>
+        <servlet-class>servlets.RegistrationServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>categories</servlet-name>
+        <servlet-class>servlets.CategoriesServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -24,9 +32,20 @@
         <servlet-name>inventory</servlet-name>
         <url-pattern>/inventory</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>registration</servlet-name>
+        <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>categories</servlet-name>
+        <url-pattern>/categories</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>login</welcome-file>
+    </welcome-file-list>
 </web-app>
